# -_GitHub-_v20_20260629

./: .env.docker  .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: build-apk.yml  ci.yml  daily-pipeline.yml
alembic/: __init__.py  env.py
alembic/versions/: 2026_01_01_0000_0001_initial_schema.py
api/: app.py  deps.py  middleware.py
api/v1/: auth.py  content.py  health.py  pipeline.py  quickgen.py  stats.py  tts.py
apk-build/: .gitignore  README.md  capacitor.config.json  package.json
console/: gitcast-console.html  manifest.json  sw.js
console/assets/: app.js  charts.js  gitcast-engine.js  tree-sitter-analyzer.js
models/: __init__.py  article.py  audio.py  base.py  project.py  publish.py  subscription.py  user.py
monitoring/: alerts.yml  prometheus.yml
monitoring/grafana/dashboards/: gitcast-overview.json
monitoring/grafana/provisioning/dashboards/: dashboards.yml
n8n/: gitcast-daily.json
preview/: index.html
prompts/project-interpret/: v0.1.0.md
scripts/: init-db.sql
services/auth/: __init__.py  jwt_handler.py  password.py  service.py
services/discovery/: github_client.py  project_filter.py  service.py  trending_scraper.py
services/generator/: llm_client.py  prompt_manager.py  repomix_client.py  service.py
services/orchestrator/: __init__.py  job_tracker.py  pipeline.py
services/publisher/: base.py  bilibili_adapter.py  factory.py  service.py  wechat_adapter.py  xiaoyuzhou_adapter.py  ximalaya_adapter.py
services/tts/: azure_adapter.py  base.py  cosyvoice_adapter.py  factory.py  segmenter.py  service.py
shared/: __init__.py  config.py  database.py  errors.py  logging.py
tests/: conftest.py
tests/unit/: test_api.py  test_auth.py  test_auth_api.py  test_config.py  test_errors.py  test_job_tracker.py  test_llm_client.py  test_monitoring.py  test_pipeline.py  test_project_filter.py  test_prompt_manager.py  test_publisher_adapters.py  test_publisher_factory.py  test_publisher_service.py  test_segmenter.py  test_storage.py  test_trending_scraper.py  test_tts_factory.py
