[project]
name = "gitcast"
version = "0.1.0"
description = "GitHub 高价值项目自动转音频平台"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "GitCast Team" }]

dependencies = [
    # Web 框架
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "pydantic>=2.10.0",
    "pydantic-settings>=2.6.0",

    # HTTP 客户端
    "httpx>=0.28.0",
    "tenacity>=9.0.0",

    # 数据库
    "sqlalchemy>=2.0.36",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",

    # 缓存与消息队列
    "redis[hiredis]>=5.2.0",

    # 日志
    "structlog>=24.4.0",

    # 工具
    "python-dotenv>=1.0.1",
    "click>=8.1.0",
    "rich>=13.9.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.3.0",
    "pyyaml>=6.0.2",

    # 认证
    "pyjwt>=2.8.0",
    "passlib[bcrypt]>=1.7.4",
    "email-validator>=2.0.0",

    # 监控
    "prometheus-client>=0.21.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx[test]>=0.28.0",
    "respx>=0.21.1",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "types-redis>=4.6.0",
    "pre-commit>=4.0.0",
]

[project.scripts]
gitcast = "gitcast.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["services", "models", "shared"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4", "SIM"]
ignore = ["A001", "A002", "A003"]  # 允许与内置同名（如 SystemError）

[tool.ruff.lint.isort]
known-first-party = ["services", "models", "shared", "api"]

[tool.ruff.lint.per-file-ignores]
"api/**/*.py" = ["B008"]  # FastAPI Depends() 模式需要函数调用作为默认值

[tool.mypy]
python_version = "3.10"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = false
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
addopts = "-v --tb=short"

[tool.coverage.run]
source = ["services", "shared"]
omit = ["tests/*", "*/__init__.py"]
